--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,12 +13,47 @@
         &-item
             width: 230px
             height: 230px
+    .footer
+        &__input
+            flex-basis: 100%
 @media (max-width: 992px)
     .newsletter-wrapper,
     .container
         max-width: 700px
     .logo
         width: 132px
+    .legal-info
+        grid-column: 4
+        grid-row: 2
+        flex-basis: 100%
+    .additional-info
+        margin-left: 18px
+        grid-column: 2/4
+        grid-row: 2
+    .footer
+        &-wrapper
+            grid-row-gap: 40px
+        &__icon
+            flex-basis: 48%
+        &__input
+            flex-basis: 48%
+        &__contact
+            &-details
+                grid-row: 3
+                grid-column: span 4
+            &-form
+                grid-row: 4
+                grid-column: span 3
+        &__logo
+            grid-row: 1/2
+        &__social
+            &-network
+                grid-row: 1/2
+                grid-column: span 4
+                align-self: center
+    .categories
+        grid-row: 2 / 3
+        grid-column: 1
     .navbar
         &-top
             padding-top: 30px
@@ -148,6 +183,9 @@
                 padding: 0 31px 36px
                 &:before, &:after
                     display: none
+    .footer
+        &__input
+            flex-basis: 100%            
 @media (max-width: 576px)
     .logo
         width: 99px
@@ -188,3 +226,51 @@
             &__strong
                 font-size: 30px
                 line-height: 38px
+    .footer
+        &-wrapper
+            grid-template-columns: 1fr
+            grid-row-gap: 30px
+        &__info
+            order: -1
+            flex-basis: 100%
+            margin-bottom: 15px
+        &__button
+            &-wrapper
+                flex-wrap: wrap
+        &__logo
+            grid-row: 1
+            grid-column: 1
+        &__title
+            &--mb-3
+                margin-bottom: 15px
+    .categories
+        grid-column: 1
+        grid-row: 5
+    .social-network
+        grid-column: 1
+        grid-row: 2
+    .additional-info
+        margin-left: 0
+        grid-column: 1
+        grid-row: 4
+    .legal-info
+        grid-column: 1
+        grid-row: 3
+    .contact-details
+        margin-top: 10px
+        flex-basis: 100%
+        grid-column: 1
+        grid-row: 6
+    .contact-form
+        margin-top: 30px
+        grid-column: 1
+        grid-row: 7
+    .policies
+        margin-top: 30px
+        grid-column: 1
+        grid-row: 8
+    .widget
+        margin-top: 10px
+        grid-row: 9
+        grid-column: 1
+        justify-self: flex-start;
